Fixes overview actions on smaller devices.

--- a/public/src/css/includes/index.less
+++ b/public/src/css/includes/index.less
@@ -29,7 +29,7 @@
 
   margin-top: 10px;
 
-  .actions {
+  .actions, .primary-actions {
 
     display: block;
     margin-bottom: 5px;
@@ -43,6 +43,10 @@
         display: block;
       }
 
+    }
+
+    .btn {
+      display: block;
     }
 
     span:last-child {
